--- a/package.json
+++ b/package.json
@@ -42,7 +42,5 @@
   "icon": "images/icon.png",
   "author": "Jason Amy",
   "license": "CC-BY-NC-4.0",
-  "dependencies": {
-    "punycode": "^2.1.1"
-  }
+  "dependencies": {}
 }
